--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./assets/style.css">
   <title>Financial Analysis</title>
 </head>
 
 <body>
 
-  <h1><h1 style="text-align:center;">✨ Open the Console to See Financial Analysis ✨ </h1></h1>
+  <h1>✨ Open the Console to See Financial Analysis ✨ </h1>
 
+  <!-- Footer -->
+  <footer>
+        <h5 id="footer"> &#10024 Designed and Built by Alexander Ainslie &#10024</h5>
+  </footer>
+
+  <!-- Script -->
   <script src="index.js"></script>
 
 </body>
