added IDs on html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-  <h1>✨ Open the Console to See Financial Analysis ✨ </h1>
+  <h1 id="header">✨ Open the Console to See Financial Analysis ✨ </h1>
 
   <!-- Footer -->
   <footer>
-        <h5 id="footer"> &#10024 Designed and Built by Alexander Ainslie &#10024</h5>
+    <h5 id="footer"> &#10024 Designed and Built by Alexander Ainslie &#10024</h5>
   </footer>
 
   <!-- Script -->
